[package]
name = "rsesl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.44"
bytes = "1.4.0"
thiserror = "1.0.47"
hyper = { version = "0.14.27", features = ["full"] }
nom = "7"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
urlencoding = "2.1.3"
tracing = "0.1.37"
axum = "0.6.20"
